welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:21: error: Int does not take parameters
			marqueSol(colors((j+decalage())%getMondeHauteur()));
                                                    ^